--- a/Present.QueueProcessor/Present.QueueProcessor.csproj
+++ b/Present.QueueProcessor/Present.QueueProcessor.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{735EDC9E-11BC-4942-A4B9-91A1E6E4BA5B}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{3BD333D8-CACA-4407-9B6F-670F76E1BAEC}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QueueMgmt.Business.Process</RootNamespace>
-    <AssemblyName>QueueMgmt.Business.Process</AssemblyName>
+    <RootNamespace>QueueMgmt.Present.QueueProcessor</RootNamespace>
+    <AssemblyName>QueueMgmt.Present.QueueProcessor</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -49,32 +52,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Execution.cs" />
-    <Compile Include="ExecutionWorker.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queue.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Business.View\Business.View.csproj">
-      <Project>{f83d5bdd-dd12-42e3-b462-0445f7ccf0e4}</Project>
-      <Name>Business.View</Name>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Business.Process\Business.Process.csproj">
+      <Project>{735edc9e-11bc-4942-a4b9-91a1e6e4ba5b}</Project>
+      <Name>Business.Process</Name>
     </ProjectReference>
     <ProjectReference Include="..\ConsoleLogger\ConsoleLogger.csproj">
       <Project>{5bc57ca9-da23-4f7c-b6df-88e74cfe187f}</Project>
       <Name>ConsoleLogger</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Data.Model\Data.Model.csproj">
-      <Project>{05a94aa9-cac1-46a1-928b-17ecaaff7776}</Project>
-      <Name>Data.Model</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ILogger\ILogger.csproj">
       <Project>{428a816d-27c6-4e73-895d-406cee8b27d7}</Project>
       <Name>ILogger</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
