--- a/Test.QueueProcessor/App.config
+++ b/Test.QueueProcessor/App.config
@@ -7,7 +7,8 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="QueueMgmt.Present.QueueProcessor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="QueueDB" connectionString="Data Source=.;Initial Catalog=QueueDB;Integrated Security=SSPI;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -25,7 +26,7 @@
         <value>1</value>
       </setting>
       <setting name="TopCount" serializeAs="String">
-        <value>1000</value>
+        <value>10</value>
       </setting>
     </QueueMgmt.Present.QueueProcessor.Properties.Settings>
   </applicationSettings>
