--- a/Test.QueueProcessor/Test.QueueProcessor.csproj
+++ b/Test.QueueProcessor/Test.QueueProcessor.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{735EDC9E-11BC-4942-A4B9-91A1E6E4BA5B}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{D3A150C5-2359-4CAF-AF55-560F5B660547}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QueueMgmt.Business.Process</RootNamespace>
-    <AssemblyName>QueueMgmt.Business.Process</AssemblyName>
+    <RootNamespace>QueueMgmt.Test.QueueProcessor</RootNamespace>
+    <AssemblyName>QueueMgmt.Test.QueueProcessor</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -28,6 +28,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -49,17 +52,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Execution.cs" />
-    <Compile Include="ExecutionWorker.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queue.cs" />
-    <Compile Include="TestExecutionWorker.cs" />
+    <Compile Include="TestData.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Business.View\Business.View.csproj">
-      <Project>{f83d5bdd-dd12-42e3-b462-0445f7ccf0e4}</Project>
-      <Name>Business.View</Name>
-    </ProjectReference>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\ConsoleLogger\ConsoleLogger.csproj">
       <Project>{5bc57ca9-da23-4f7c-b6df-88e74cfe187f}</Project>
       <Name>ConsoleLogger</Name>
@@ -72,10 +73,6 @@
       <Project>{428a816d-27c6-4e73-895d-406cee8b27d7}</Project>
       <Name>ILogger</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
