--- a/Business.Process/Business.Process.csproj
+++ b/Business.Process/Business.Process.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Execution.cs" />
-    <Compile Include="ExecutionWorker.cs" />
+    <Compile Include="IExecutionWorker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
     <Compile Include="TestExecutionWorker.cs" />
