--- a/Business.Process/Business.Process.csproj
+++ b/Business.Process/Business.Process.csproj
@@ -49,13 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Execution.cs" />
-    <Compile Include="IExecutionWorker.cs" />
+    <Compile Include="ExecFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
-    <Compile Include="TestExecutionWorker.cs" />
+    <Compile Include="Vault.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Business.Exec.Generic\Business.Exec.Generic.csproj">
+      <Project>{9a9031a5-5c79-4086-ae9d-b48747b88ef1}</Project>
+      <Name>Business.Exec.Generic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Business.View\Business.View.csproj">
       <Project>{f83d5bdd-dd12-42e3-b462-0445f7ccf0e4}</Project>
       <Name>Business.View</Name>
