--- a/Data.Model/Data.Model.csproj
+++ b/Data.Model/Data.Model.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueDbContext.cs" />
     <Compile Include="Request.cs" />
+    <Compile Include="Worker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
