--- a/Business.Maintenance/Business.Maintenance.csproj
+++ b/Business.Maintenance/Business.Maintenance.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9A9031A5-5C79-4086-AE9D-B48747B88EF1}</ProjectGuid>
+    <ProjectGuid>{E18684A0-8989-4508-8CD0-85529E1D87CB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QueueMgmt.Business.Exec.Generic</RootNamespace>
-    <AssemblyName>QueueMgmt.Business.Exec.Generic</AssemblyName>
+    <RootNamespace>QueueMgmt.Business.Maintenance</RootNamespace>
+    <AssemblyName>QueueMgmt.Business.Maintenance</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -49,21 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Execution.cs" />
-    <Compile Include="ExecutionCompletedEventArgs.cs" />
-    <Compile Include="IExecutionWorker.cs" />
+    <Compile Include="Manager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestExecutionWorker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Business.View\Business.View.csproj">
-      <Project>{f83d5bdd-dd12-42e3-b462-0445f7ccf0e4}</Project>
-      <Name>Business.View</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ConsoleLogger\ConsoleLogger.csproj">
       <Project>{5bc57ca9-da23-4f7c-b6df-88e74cfe187f}</Project>
       <Name>ConsoleLogger</Name>
