--- a/Present.Maintenance/Present.Maintenance.csproj
+++ b/Present.Maintenance/Present.Maintenance.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9A9031A5-5C79-4086-AE9D-B48747B88EF1}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{576F0323-1D0D-44FC-BB71-7463082F3AF4}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QueueMgmt.Business.Exec.Generic</RootNamespace>
-    <AssemblyName>QueueMgmt.Business.Exec.Generic</AssemblyName>
+    <RootNamespace>QueueMgmt.Present.Maintenance</RootNamespace>
+    <AssemblyName>QueueMgmt.Present.Maintenance</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -49,28 +52,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Execution.cs" />
-    <Compile Include="ExecutionCompletedEventArgs.cs" />
-    <Compile Include="IExecutionWorker.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestExecutionWorker.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Business.View\Business.View.csproj">
-      <Project>{f83d5bdd-dd12-42e3-b462-0445f7ccf0e4}</Project>
-      <Name>Business.View</Name>
+    <ProjectReference Include="..\Business.Maintenance\Business.Maintenance.csproj">
+      <Project>{e18684a0-8989-4508-8cd0-85529e1d87cb}</Project>
+      <Name>Business.Maintenance</Name>
     </ProjectReference>
     <ProjectReference Include="..\ConsoleLogger\ConsoleLogger.csproj">
       <Project>{5bc57ca9-da23-4f7c-b6df-88e74cfe187f}</Project>
       <Name>ConsoleLogger</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Data.Model\Data.Model.csproj">
-      <Project>{05a94aa9-cac1-46a1-928b-17ecaaff7776}</Project>
-      <Name>Data.Model</Name>
     </ProjectReference>
     <ProjectReference Include="..\ILogger\ILogger.csproj">
       <Project>{428a816d-27c6-4e73-895d-406cee8b27d7}</Project>
