enhance logger to add props to control its logging by log type

--- a/Present.Maintenance/App.config
+++ b/Present.Maintenance/App.config
@@ -49,6 +49,15 @@
       <setting name="DeleteTimeout" serializeAs="String">
         <value>3600</value>
       </setting>
+      <setting name="CanAddError" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CanAddWarning" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CanAddInfo" serializeAs="String">
+        <value>True</value>
+      </setting>
     </QueueMgmt.Present.Maintenance.Properties.Settings>
   </applicationSettings>
 </configuration>
