--- a/Present.QueueProcessor/Properties/Settings.settings
+++ b/Present.QueueProcessor/Properties/Settings.settings
@@ -6,7 +6,16 @@
       <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="TopCount" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">10</Value>
+      <Value Profile="(Default)">1000</Value>
+    </Setting>
+    <Setting Name="CanAddError" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="CanAddWarning" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="CanAddInfo" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
